also port the CLI while we're at it